# workspace_scripts

./: .gitignore  10.init.bash.em  10.setup.bash.em  10.setup.sh.em  11.scripts.sh.em  11.setup.bash.em  12.bash.bash.em  20.setup.bash.em  20.setup_example.bash.em  50.exports.bash.em  90.exports.bash.em  91.autostart.bash.em  99.auto_rosmaster.bash.em  CMakeLists.txt  README.md  package.xml
docker/cross_compile/: Dockerfile  cross_compile
scripts/: analyze.py  analyze.sh  autostart.sh  broadcast.sh  clang-format.sh  clean.sh  clean_externals.sh  clean_orphans.sh  clear_bags.sh  clear_cmake_cache.sh  clone.sh  cross_compile.py  install.sh  install_gazebo.sh  launch.sh  make.sh  make_clean.sh  master.sh  record_desktop.sh  revert.sh  rm_from_workspace.sh  rm_package.sh  robot_upgrade.sh  rosdoc.sh  screen.sh  shutdown.sh  sim.sh  ssh.sh  sshfs.sh  status.py  status.sh  switch_gazebo.sh  sync.sh  system_check.sh  test.sh  ui.sh  uninstall.sh  update.sh  update_make.sh  wait_for_roscore.sh  (+1 more)
scripts/completion/: analyze.sh  catkin_pkgs.sh  clean.sh  install.sh  remote_pc.sh  rm_package.sh  robot_pc.sh  rosdoc.sh  sim.sh  test.sh  ui.sh  uninstall.sh  workspace.sh
scripts/helper/: flushBaurdRateTo2MB.sh  functions.sh  helper.sh  mass_execute.sh  rm_obsolete_packages.sh  robot_bringup.sh  rosinstall.sh  run_all.sh
scripts/hooks/: clean_externals.sh  clean_externals.sh_  make_externals.sh  make_externals.sh_  update.sh  update.sh_
scripts/rules/: catkin_lint_rule.py  cmake_comment_rule.py  rule_example.py.em
