<?xml version="1.0"?>
<package format="2">
  <name>workspace_scripts</name>
  <version>0.0.0</version>
  <description>The workspace_scripts package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="stumpf@sim.tu-darmstadt.de">Alexander Stumpf</maintainer>
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/thor_scripts</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="stumpf@sim.tu-darmstadt.de">Alexander Stumpf</author>
  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rosbash</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>screen</exec_depend>
  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>git</exec_depend>
  <exec_depend>python-git</exec_depend>
  <exec_depend>python-argparse</exec_depend>

</package>
