<?xml version="1.0"?>
<package>
  <name>workspace_scripts</name>
  <version>0.0.0</version>
  <description>The workspace_scripts package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="stumpf@sim.tu-darmstadt.de">Alexander Stumpf</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/thor_scripts</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="stumpf@sim.tu-darmstadt.de">Alexander Stumpf</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rosbash</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>screen</run_depend>
  <run_depend>ffmpeg</run_depend>
  <run_depend>git</run_depend>

</package>
